@@ -9,3 +9,4 @@
 /images/18QQ-REP02/
 /images/1870-REP03/
 /working/
+/backups/
